<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <Button
        android:id="@+id/from_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_from"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_from"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_result"
            android:textSize="22sp"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/to_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_to"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_to"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_result"
            android:textSize="22sp"
            android:paddingLeft="10dp"/>
    </LinearLayout>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/dialog_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_ok"
            android:textSize="18sp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>