<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.androidmobdev.MainActivity" >

    <item
        android:id="@+id/edit"
        android:orderInCategory="100"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit_white_18dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_18dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never"/>

</menu>
