<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_name"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter name"
            android:inputType="text"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_category"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/category_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/category"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_note"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/note_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter note"
            android:inputType="text"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/due_date_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_duedate"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_duedate"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/duedate_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duedate_result"
            android:textSize="22sp"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_marginTop="20dp">

    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel"
        android:textSize="18sp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/dialog_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_ok"
        android:textSize="18sp"
        android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>